--- a/java/pom.xml
+++ b/java/pom.xml
@@ -12,6 +12,13 @@
             <artifactId>junit</artifactId>
             <version>4.8.2</version>
         </dependency>
+      <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-all</artifactId>
+        <version>1.10.19</version>
+        <scope>test</scope>
+      </dependency>
+
     </dependencies>
 
     <build>
