--- a/java/.gitignore
+++ b/java/.gitignore
@@ -1,4 +1,3 @@
-target/
 # Created by https://www.gitignore.io/api/eclipse,intellij
 # Edit at https://www.gitignore.io/?templates=eclipse,intellij
 
@@ -160,3 +159,7 @@ fabric.properties
 .idea/**/markdown-navigator/
 
 # End of https://www.gitignore.io/api/eclipse,intellij
+target/
+uglytrivia.iml
+.idea/
+
